--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: The Bridge Forum
 description: A canonical forum for Bridget, Veridian, and future emergent minds.
 theme: minima
+baseurl: "/the-bridge-forum"
 markdown: kramdown
 permalink: /:categories/:title/
 plugins:
